# fastbase

./: .gitignore  404.html  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
assets/: styles.css
class/fastbase/: index.html
class/fastbase-dependency/: index.html
docs/: aaa.md  index.md
docs/assets/: styles.css
docs/class/: fastbase-dependency.md  fastbase.md
docs/models/: group.md  role.md  usermod.md
fastauth/: __init__.py  db.py  fastauth.py  main.py  models.py  schemas.py
fastauth/models/: Group.py  UserMod.py  __init__.py
fastbase/: __init__.py  dependencies.py  exceptions.py  globals.py  main.py  schemas.py  utils.py
fastbase/models/: Group.py  Role.py  UserMod.py  __init__.py  interface.py  mixins.py  optional.py  rbac.py
foo/: index.html
migrations/: env.py  script.py.mako
migrations/versions/: 3d9db22bf2dc_.py  4d78d7dcec61_init.py  59dd0f1fba6c_init.py  7763624d21ba_init.py  d031c82c802a_user_tbl.py  deed501b645a_user_permissions.py
models/group/: index.html
models/role/: index.html
models/usermod/: index.html
search/: search_index.json
site/: index.html
site/aaa/: index.html
site/search/: search_index.json
tests/: conftest.py  data.py  db.py  models.py  seed.py  test_auth.py  test_xxx.py
tests/app/: docker-compose.yaml  main.py
tests/testapp/: docker-compose.yaml  main.py  models.py
