[tool.poetry]
name = "fastbase"
version = "0.3.0"
description = ""
authors = ["enchance <enchance@gmail.com>"]
readme = "README.md"
license = 'MIT'
homepage = 'https://github.com/enchance/fastbase.git'
repository = 'https://github.com/enchance/fastbase.git'
keywords = ['firebase', 'fastapi', 'sqlmodel', 'authentication', 'api', 'rest']
include = ['LICENSE']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
firebase-admin = "^6.2.0"
pytz = "^2023.3.post1"
pydantic = ">=1.9.0,<2.0.0"
sqlmodel = "^0.0.12"
redis-om = "^0.2.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
icecream = "^2.1.3"
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-asyncio = "^0.23.1"
httpx = "^0.25.2"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
