[tool.poetry]
name = "fastbase"
version = "0.4.0"
description = ""
authors = ["enchance <enchance@gmail.com>"]
readme = "README.md"
license = 'MIT'
homepage = 'https://github.com/enchance/fastbase.git'
repository = 'https://github.com/enchance/fastbase.git'
keywords = ['firebase', 'fastapi', 'sqlmodel', 'authentication', 'api', 'rest']
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = ">=1.9.0,<2.0.0"
sqlmodel = "^0.0.12"
redis-om = "^0.2.1"
icecream = "^2.1.3"
arrow = "^1.3.0"
firebase-admin = "^6.3.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-asyncio = "^0.23.1"
pytest-ordering = "^0.6"
httpx = "^0.25.2"
python-decouple = "^3.8"
alembic = "^1.13.0"
faker = "^21.0.0"
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.2"}
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
